Started cleanup of grammar